--- a/NanoBusiness/Base.lproj/Main.storyboard
+++ b/NanoBusiness/Base.lproj/Main.storyboard
@@ -1,24 +1,135 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BV1-FR-VrT">
+    <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="NanoBusiness" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="NNN-L1-T7X">
+                                <rect key="frame" x="282.5" y="310" width="331" height="83"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bCS-w9-Aoa">
+                                        <rect key="frame" x="0.0" y="0.0" width="82.5" height="83"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GZz-Y4-h5H">
+                                                <rect key="frame" x="4" y="4.5" width="74.5" height="74.5"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain">
+                                                    <backgroundConfiguration key="background" image="btnDown"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="BtnDownPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="xIc-ah-Wf9"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="GZz-Y4-h5H" firstAttribute="height" secondItem="bCS-w9-Aoa" secondAttribute="height" multiplier="0.9" id="2zd-On-HU4"/>
+                                            <constraint firstItem="GZz-Y4-h5H" firstAttribute="width" secondItem="bCS-w9-Aoa" secondAttribute="width" multiplier="0.9" id="G7k-Or-evW"/>
+                                            <constraint firstItem="GZz-Y4-h5H" firstAttribute="centerY" secondItem="bCS-w9-Aoa" secondAttribute="centerY" id="fCI-PE-nCU"/>
+                                            <constraint firstItem="GZz-Y4-h5H" firstAttribute="centerX" secondItem="bCS-w9-Aoa" secondAttribute="centerX" id="kjI-Hu-YDZ"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="baT-7Z-JSR">
+                                        <rect key="frame" x="82.5" y="0.0" width="83" height="83"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nsn-t0-eyq">
+                                                <rect key="frame" x="4.5" y="4.5" width="74.5" height="74.5"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain">
+                                                    <backgroundConfiguration key="background" image="btnUp"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="BtnUpPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="386-wd-yK8"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="nsn-t0-eyq" firstAttribute="centerX" secondItem="baT-7Z-JSR" secondAttribute="centerX" id="2Z1-cE-iAs"/>
+                                            <constraint firstItem="nsn-t0-eyq" firstAttribute="height" secondItem="baT-7Z-JSR" secondAttribute="height" multiplier="0.9" id="GRs-UY-VnW"/>
+                                            <constraint firstItem="nsn-t0-eyq" firstAttribute="centerY" secondItem="baT-7Z-JSR" secondAttribute="centerY" id="LVm-Jv-X1U"/>
+                                            <constraint firstItem="nsn-t0-eyq" firstAttribute="width" secondItem="baT-7Z-JSR" secondAttribute="width" multiplier="0.9" id="NMX-eC-CrM"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q5U-ef-MLZ">
+                                        <rect key="frame" x="165.5" y="0.0" width="83" height="83"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8vx-Ii-gAz">
+                                                <rect key="frame" x="4" y="4.5" width="74.5" height="74.5"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain">
+                                                    <backgroundConfiguration key="background" image="btnFoot"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="BtnFootPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="wF9-Ze-tGS"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="8vx-Ii-gAz" firstAttribute="height" secondItem="Q5U-ef-MLZ" secondAttribute="height" multiplier="0.9" id="Ewt-vY-jJO"/>
+                                            <constraint firstItem="8vx-Ii-gAz" firstAttribute="centerY" secondItem="Q5U-ef-MLZ" secondAttribute="centerY" id="c6c-pW-RkU"/>
+                                            <constraint firstItem="8vx-Ii-gAz" firstAttribute="width" secondItem="Q5U-ef-MLZ" secondAttribute="width" multiplier="0.9" id="o2h-34-JlU"/>
+                                            <constraint firstItem="8vx-Ii-gAz" firstAttribute="centerX" secondItem="Q5U-ef-MLZ" secondAttribute="centerX" id="sJn-tW-1Mk"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8BZ-Kh-Bhm">
+                                        <rect key="frame" x="248.5" y="0.0" width="82.5" height="83"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nqg-ca-fL2">
+                                                <rect key="frame" x="4" y="4.5" width="74.5" height="74.5"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain">
+                                                    <backgroundConfiguration key="background" image="btnPunch"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="BtnPunchPressed:" destination="BV1-FR-VrT" eventType="touchDown" id="E5W-Dm-HYV"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Nqg-ca-fL2" firstAttribute="width" secondItem="8BZ-Kh-Bhm" secondAttribute="width" multiplier="0.9" id="2LS-Yg-ME7"/>
+                                            <constraint firstItem="Nqg-ca-fL2" firstAttribute="centerY" secondItem="8BZ-Kh-Bhm" secondAttribute="centerY" id="8KM-gO-mAD"/>
+                                            <constraint firstItem="Nqg-ca-fL2" firstAttribute="height" secondItem="8BZ-Kh-Bhm" secondAttribute="height" multiplier="0.9" id="Ch7-Oc-3Bk"/>
+                                            <constraint firstItem="Nqg-ca-fL2" firstAttribute="centerX" secondItem="8BZ-Kh-Bhm" secondAttribute="centerX" id="HvP-1t-U7e"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="NNN-L1-T7X" secondAttribute="height" multiplier="4:1" id="DQD-4e-zsI"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NNN-L1-T7X" firstAttribute="centerX" secondItem="4qk-I5-YsI" secondAttribute="centerX" id="Vn7-5N-Hb4"/>
+                            <constraint firstItem="4qk-I5-YsI" firstAttribute="bottom" secondItem="NNN-L1-T7X" secondAttribute="bottom" id="WCP-kw-bhN"/>
+                            <constraint firstItem="NNN-L1-T7X" firstAttribute="height" secondItem="3se-qz-xqx" secondAttribute="height" multiplier="0.2" id="lD8-4a-9Ya"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="91"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btnDown" width="256" height="256"/>
+        <image name="btnFoot" width="256" height="256"/>
+        <image name="btnPunch" width="256" height="256"/>
+        <image name="btnUp" width="256" height="256"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
