--- a/cyberunner/Home.storyboard
+++ b/cyberunner/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="soP-t1-5Q5">
     <device id="retina6_1" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" sceneMemberID="viewController">
+                <viewController id="Y6W-OH-hqX" customClass="HomeViewController" customModule="cyberunner" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,7 +32,7 @@
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aK9-UT-k5c">
-                                        <rect key="frame" x="152.5" y="-20" width="503" height="186.5"/>
+                                        <rect key="frame" x="152.5" y="24" width="503" height="186.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newLogo" translatesAutoresizingMaskIntoConstraints="NO" id="vMl-ta-sGy">
                                                 <rect key="frame" x="1" y="108" width="501" height="78.5"/>
@@ -94,6 +94,14 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnPlayy" translatesAutoresizingMaskIntoConstraints="NO" id="QdL-nk-izk">
                                         <rect key="frame" x="111" y="0.0" width="105" height="122"/>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a6p-Qs-ujO">
+                                        <rect key="frame" x="111" y="0.0" width="105" height="122"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <connections>
+                                            <action selector="PlayPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="2GP-y6-9Ex"/>
+                                        </connections>
+                                    </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnWinner" translatesAutoresizingMaskIntoConstraints="NO" id="PZD-ME-aFl">
                                         <rect key="frame" x="-0.5" y="0.0" width="85" height="108"/>
                                     </imageView>
@@ -105,12 +113,16 @@
                                     <constraint firstAttribute="width" secondItem="8tI-HO-rHy" secondAttribute="height" multiplier="327:150" id="3iE-8z-i4h"/>
                                     <constraint firstItem="PZD-ME-aFl" firstAttribute="top" secondItem="8tI-HO-rHy" secondAttribute="top" id="8on-wD-ho5"/>
                                     <constraint firstItem="PZD-ME-aFl" firstAttribute="leading" secondItem="8tI-HO-rHy" secondAttribute="leading" constant="-0.5" id="9VR-Oa-hqN"/>
+                                    <constraint firstItem="a6p-Qs-ujO" firstAttribute="height" secondItem="QdL-nk-izk" secondAttribute="height" id="ABh-rK-STx"/>
+                                    <constraint firstItem="a6p-Qs-ujO" firstAttribute="centerY" secondItem="QdL-nk-izk" secondAttribute="centerY" id="DlJ-Dj-Xdu"/>
+                                    <constraint firstItem="a6p-Qs-ujO" firstAttribute="centerX" secondItem="QdL-nk-izk" secondAttribute="centerX" id="ENL-8F-pdC"/>
                                     <constraint firstAttribute="trailing" secondItem="u4l-8Z-aCo" secondAttribute="trailing" id="Ehs-OK-PCz"/>
                                     <constraint firstItem="QdL-nk-izk" firstAttribute="height" secondItem="8tI-HO-rHy" secondAttribute="height" multiplier="0.813333" id="J1j-1v-e1M"/>
                                     <constraint firstItem="QdL-nk-izk" firstAttribute="width" secondItem="8tI-HO-rHy" secondAttribute="width" multiplier="0.32" id="Jbm-C2-nMm"/>
                                     <constraint firstItem="u4l-8Z-aCo" firstAttribute="height" secondItem="8tI-HO-rHy" secondAttribute="height" multiplier="0.72" id="Njx-sA-UKV"/>
                                     <constraint firstItem="PZD-ME-aFl" firstAttribute="height" secondItem="8tI-HO-rHy" secondAttribute="height" multiplier="0.72" id="Oan-I9-zft"/>
                                     <constraint firstItem="QdL-nk-izk" firstAttribute="top" secondItem="8tI-HO-rHy" secondAttribute="top" id="bqA-Lz-VDh"/>
+                                    <constraint firstItem="a6p-Qs-ujO" firstAttribute="width" secondItem="QdL-nk-izk" secondAttribute="width" id="eD7-Ca-qI3"/>
                                     <constraint firstItem="u4l-8Z-aCo" firstAttribute="width" secondItem="8tI-HO-rHy" secondAttribute="width" multiplier="0.26" id="heq-VT-rJc"/>
                                     <constraint firstItem="QdL-nk-izk" firstAttribute="centerX" secondItem="8tI-HO-rHy" secondAttribute="centerX" id="hvh-zD-bpi"/>
                                     <constraint firstItem="PZD-ME-aFl" firstAttribute="width" secondItem="8tI-HO-rHy" secondAttribute="width" multiplier="0.26" id="idN-0d-Gbi"/>
@@ -139,8 +151,27 @@
                             <constraint firstItem="aK9-UT-k5c" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.45" id="tWC-mJ-Zsx"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="xlq-Yj-b5Z"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="875.22321428571422" y="66.666666666666671"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MjQ-yH-ypH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="soP-t1-5Q5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="onX-W1-Rry">
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="CDE-53-ScI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jBs-S4-5PH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.91964285714286" y="66.666666666666671"/>
         </scene>
